--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ jobs:
     name: Run Go Integration Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.13
+          go-version: '^1.13.1'
       - uses: autero1/action-terraform@v1.1.0
         with:
           terraform_version: 1.2.8
@@ -17,4 +17,4 @@ jobs:
         run: go mod download
       - name: Run Go Tests
         working-directory: test
-        run: o test -v -timeout 30m
+        run: go test -v -timeout 30m
