--- a/test/resource/data.properties
+++ b/test/resource/data.properties
@@ -1,3 +1,3 @@
-data=192.168.1.13
+bucket.name=test_bucket_123
 response.body={"data":{"id":2,"email":"janet.weaver@reqres.in","first_name":"Janet","last_name":"Weaver","avatar":"https://reqres.in/img/faces/2-image.jpg"},"support":{"url":"https://reqres.in/#support-heading","text":"To keep ReqRes free, contributions towards server costs are appreciated!"}}
 response.status=200
